Inject module names and source paths from Gradle