@@ -10,13 +10,12 @@
 
 package platform.tooling.support.tests;
 
+import static java.util.Objects.requireNonNull;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.io.File;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
-import java.util.StringJoiner;
+import java.util.Arrays;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
@@ -28,41 +27,27 @@ import platform.tooling.support.ThirdPartyJars;
 class ModularCompilationTests {
 
 	@Test
-	void compileAllJUnitModules(@TempDir Path workspace, @FilePrefix("javac") OutputFiles javacOutputFiles) throws Exception {
+	void compileAllJUnitModules(@TempDir Path workspace, @FilePrefix("javac") OutputFiles javacOutputFiles)
+			throws Exception {
 		var lib = Files.createDirectories(workspace.resolve("lib"));
 		ThirdPartyJars.copyAll(lib);
 
-		var modules = List.of(
-			// core
-			"org.junit.platform.commons", "org.junit.platform.console", "org.junit.platform.engine",
-			"org.junit.platform.launcher", "org.junit.platform.reporting",
-			// suite
-			"org.junit.platform.suite", "org.junit.platform.suite.api", "org.junit.platform.suite.engine",
-			// jupiter
-			"org.junit.jupiter", "org.junit.jupiter.api", "org.junit.jupiter.engine", "org.junit.jupiter.params");
+		var moduleNames = Arrays.asList(System.getProperty("junit.modules").split(","));
 
-		var result = ProcessStarters.javaCommand("javac") //
+		var outputDir = workspace.resolve("classes").toAbsolutePath();
+		var processStarter = ProcessStarters.javaCommand("javac") //
 				.workingDir(workspace) //
-				.addArguments("-d", workspace.resolve("classes").toAbsolutePath().toString()) //
-				.addArguments("-Xlint:all", "-Werror")
+				.addArguments("-d", outputDir.toString()) //
+				.addArguments("-Xlint:all", "-Werror") //
+				.addArguments("-Xlint:-requires-automatic,-requires-transitive-automatic") // JUnit 4
 				// external modules
-				.addArguments("--module-path", lib.toAbsolutePath().toString())
-				// source locations in module-specific form
-				.addArguments("--module-source-path", moduleSourcePath("jupiter")) //
-				.addArguments("--module-source-path", moduleSourcePath("jupiter-api")) //
-				.addArguments("--module-source-path", moduleSourcePath("jupiter-engine")) //
-				.addArguments("--module-source-path", moduleSourcePath("jupiter-migrationsupport")) //
-				.addArguments("--module-source-path", moduleSourcePath("jupiter-params")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-commons")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-console")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-engine")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-launcher")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-reporting")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-suite")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-suite-api")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-suite-engine")) //
-				.addArguments("--module-source-path", moduleSourcePath("platform-testkit")) //
-				.addArguments("--module-source-path", moduleSourcePath("vintage-engine"))
+				.addArguments("--module-path", lib.toAbsolutePath().toString());
+
+		// source locations in module-specific form
+		moduleNames.forEach(
+			moduleName -> processStarter.addArguments("--module-source-path", moduleSourcePath(moduleName)));
+
+		var result = processStarter
 				// un-shadow
 				.addArguments("--add-modules", "info.picocli") //
 				.addArguments("--add-reads", "org.junit.platform.console=info.picocli") //
@@ -71,21 +56,15 @@ class ModularCompilationTests {
 				.addArguments("--add-modules", "de.siegmar.fastcsv") //
 				.addArguments("--add-reads", "org.junit.jupiter.params=de.siegmar.fastcsv")
 				// modules to compile
-				.addArguments("--module", String.join(",", modules)) //
+				.addArguments("--module", String.join(",", moduleNames)) //
 				.redirectOutput(javacOutputFiles) //
 				.startAndWait();
 
 		assertEquals(0, result.exitCode());
 	}
 
-	static String moduleSourcePath(String tag) {
-		var name = "org.junit." + tag.replace('-', '.');
-		var path = Path.of("../junit-%s/src/main/java".formatted(tag));
-		var joiner = new StringJoiner(File.pathSeparator);
-		joiner.add(path.toAbsolutePath().toString());
-		var jte = Path.of("../junit-%s/build/generated/sources/jte/main".formatted(tag));
-		if (Files.exists(jte))
-			joiner.add(jte.toAbsolutePath().toString());
-		return "%s=%s".formatted(name, joiner.toString());
+	static String moduleSourcePath(String moduleName) {
+		return "%s=%s".formatted(moduleName,
+			requireNonNull(System.getProperty("junit.moduleSourcePath." + moduleName)));
 	}
 }
